# SummerPractic2021

./: .gitignore  Otchet.docx  README.md
OpenCV/: CMakeLists.txt  camera.cpp  example.cpp  face_detect.cpp  test.cpp
OpenCV/examples/: camera.cpp  camera_contour.cpp  center_multiple-blob.cpp  convex_hull.cpp  countour+save.cpp  countout_binary.cpp  face_detect.textClipping  image_contour.cpp  inverted_image.cpp  open_image.cpp  windows.cpp
UML/: Robot.mdj
example/: CMakeLists.txt  Makefile  data.txt  histogramm.cpp  mqttPublish.cpp  mqttSubscribe.cpp  mqtt_publish.cpp  position.cpp  roi+histogram.cpp  start_mosquitto_broker.command  stop_mosquitto_broker.command  video+coordinates+publish.cpp  video+coordinates.cpp
src/: Makefile  hmi.cpp  publish.cpp  robot  robot.cpp  robot.hpp  subscribe.cpp
